# aicourse

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
aicourse/: Cargo.toml  rustfmt.toml
aicourse-train/: Cargo.toml
aicourse-train/datasets/: mnist
aicourse-train/src/: main.rs
aicourse-webcam/: Cargo.toml
aicourse-webcam/src/: font.rs  main.rs
aicourse/benches/: bench.rs
aicourse/src/: lib.rs  util.rs
aicourse/src/matrix/: mod.rs
aicourse/src/network/: dff_logistic.rs
aicourse/src/regression/: common.rs  linear.rs  logistic.rs  logistic_multi.rs  mod.rs  polynomial.rs
assets/datasets/: mnist
benches/: bench.rs
datasets/: mnist
src/: lib.rs  linreg.rs  logreg.rs  logregm.rs  main.rs  matrix.rs  polyreg.rs  testdata.rs  util.rs
src/matrix/: idx.rs  matrix.rs
src/network/: dff.rs  dff_executor.rs  dff_logistic.rs  mod.rs
src/regression/: common.rs  linear.rs  logistic.rs  logistic_multi.rs  mod.rs  polynomial.rs
webcam-app/: .gitignore  Cargo.toml
webcam-app/src/: main.rs
webcam-app/src/recognize/: convert_mat.rs  main.rs
